# aliyun-ecs-manager

./: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/: App.init.tsx  binding.ts  index.css  index.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: init.rs  lib.rs  main.rs  test_utils.rs  types.rs
src-tauri/src/commands/: auth.rs  mod.rs
src-tauri/src/services/: client.rs  error.rs  mod.rs
src-tauri/src/services/auth/: error.rs  mod.rs  store.rs  types.rs
src/layouts/: CenterPromptLayout.tsx
src/lib/: auth.ts
src/lib/utils/: form.ts
src/pages/dashboard/: DashboardPage.tsx
src/pages/globs/: NotFound.tsx
src/pages/login/: LoginPage.tsx  utils.ts
