[package]
name = "aliyun-ecs-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aliyun_ecs_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alibabacloud = {git = "https://github.com/nysparia/aliyun-sdk-rust.git", branch = "refactor-detailed-error"}
tauri-plugin-store = "2"
anyhow = "1.0.100"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
thiserror = "2.0.17"
serde_with = "3.15.1"
serde-error = "0.1.3"
parking_lot = "0.12.5"
tracing = "0.1.41"
tauri-plugin-log = "2"
tracing-subscriber = "0.3.20"
log = { version = "0.4.28", features = ["kv", "kv_serde"] }
reqwest = "0.12.24"

[dev-dependencies]
claims = "0.8.0"
dotenv = "0.15.0"
once_cell = "1.21.3"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros"] }

